# labo-1

./: README.md  ]  database.py  database_manager.py  main.py  models.py  pyproject.toml  schema.py
data/: clients.csv  equipments.csv  locations.csv
script/: seed_db.py
src/location/: main.py  styles.qss
src/location/database/: database.py  database_manager.py  models.py  schema.py
src/location/script/: seed_db.py
src/location/ui/: add_client_form.py  add_equipment_form.py  add_location_form.py  client_page.py  equipment_page.py  location_page.py  widgets.py
ui/: add_location_form.py  equipment_page.py  location_page.py
