[project]
name = "location"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pyside6>=6.10.1",
    "sqlalchemy>=2.0.45",
]

[project.scripts]
main = "location.main:main"
seed = "location.script.seed_db:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

